Add config option to enable partial names for all commands