@@ -10,8 +10,6 @@ import java.util.HashMap;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 public class TpaManager {
 
@@ -74,7 +72,7 @@ public class TpaManager {
     public List<Participants> getRequestsFor(UUID target) {
         return requestMap.keySet().stream()
             .filter(request -> request.requested().equals(target))
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
